tests/paczka1/fuzzy1/82138523.err
Error in line 1: 2bxXcdIKj A482 40,6
Error in line 7: EfRFAo S46 83,
Error in line 2: 2bxXcdIKj A788 95,1
Error in line 5: 5cNWQDf7LG S46 64,5
Error in line 6: EfRFAo S46 33,8
Error in line 21: 5cNWQDf7LG A58 79,4
Error in line 16: S46 A788 264,0
Error in line 30: 6hQ A482 49,6
Error in line 34: 6hQ A58 46,0
